; ModuleID = '/home/carl/AnghaBench/libgit2/tests/ignore/extr_status.c_test_ignore_status__contained_dir_with_matching_name.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/ignore/extr_status.c_test_ignore_status__contained_dir_with_matching_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32, i8**, i32*, i32, i32, i32 }

@test_ignore_status__contained_dir_with_matching_name.test_files = internal global [3 x i8*] [i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [55 x i8] c"empty_standard_repo/subdir_match/aaa/subdir_match/file\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"empty_standard_repo/subdir_match/zzz_ignoreme\00", align 1
@test_ignore_status__contained_dir_with_matching_name.expected_paths = internal global [3 x i8*] [i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i32 0, i32 0)], align 16
@.str.2 = private unnamed_addr constant [24 x i8] c"subdir_match/.gitignore\00", align 1
@.str.3 = private unnamed_addr constant [35 x i8] c"subdir_match/aaa/subdir_match/file\00", align 1
@.str.4 = private unnamed_addr constant [26 x i8] c"subdir_match/zzz_ignoreme\00", align 1
@test_ignore_status__contained_dir_with_matching_name.expected_statuses = internal constant [3 x i32] [i32 128, i32 128, i32 129], align 4
@GIT_STATUS_OPTIONS_INIT = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@.str.5 = private unnamed_addr constant [20 x i8] c"empty_standard_repo\00", align 1
@.str.6 = private unnamed_addr constant [44 x i8] c"empty_standard_repo/subdir_match/.gitignore\00", align 1
@.str.7 = private unnamed_addr constant [12 x i8] c"*_ignoreme\0A\00", align 1
@GIT_STATUS_OPT_DEFAULTS = common dso_local global i32 0, align 4
@GIT_STATUS_OPT_RECURSE_IGNORED_DIRS = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@cb_status__normal = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_ignore_status__contained_dir_with_matching_name() #0 {
  %1 = alloca %struct.TYPE_8__, align 4
  %2 = alloca %struct.TYPE_7__, align 8
  %3 = bitcast %struct.TYPE_8__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %3, i8* align 4 bitcast (%struct.TYPE_8__* @GIT_STATUS_OPTIONS_INIT to i8*), i64 4, i1 false)
  %4 = call i32 @make_test_data(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i8** getelementptr inbounds ([3 x i8*], [3 x i8*]* @test_ignore_status__contained_dir_with_matching_name.test_files, i64 0, i64 0))
  %5 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.7, i64 0, i64 0))
  %6 = call i32 @refute_is_ignored(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.3, i64 0, i64 0))
  %7 = call i32 @assert_is_ignored(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %8 = call i32 @memset(%struct.TYPE_7__* %2, i32 0, i32 40)
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 0
  store i32 3, i32* %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 1
  store i8** getelementptr inbounds ([3 x i8*], [3 x i8*]* @test_ignore_status__contained_dir_with_matching_name.expected_paths, i64 0, i64 0), i8*** %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 2
  store i32* getelementptr inbounds ([3 x i32], [3 x i32]* @test_ignore_status__contained_dir_with_matching_name.expected_statuses, i64 0, i64 0), i32** %11, align 8
  %12 = load i32, i32* @GIT_STATUS_OPT_DEFAULTS, align 4
  %13 = load i32, i32* @GIT_STATUS_OPT_RECURSE_IGNORED_DIRS, align 4
  %14 = or i32 %12, %13
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %1, i32 0, i32 0
  store i32 %14, i32* %15, align 4
  %16 = load i32, i32* @g_repo, align 4
  %17 = load i32, i32* @cb_status__normal, align 4
  %18 = call i32 @git_status_foreach_ext(i32 %16, %struct.TYPE_8__* %1, i32 %17, %struct.TYPE_7__* %2)
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 5
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @cl_assert_equal_i(i32 %21, i32 %23)
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 4
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @cl_assert_equal_i(i32 0, i32 %26)
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 3
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @cl_assert_equal_i(i32 0, i32 %29)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @make_test_data(i8*, i8**) #2

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #2

declare dso_local i32 @refute_is_ignored(i8*) #2

declare dso_local i32 @assert_is_ignored(i8*) #2

declare dso_local i32 @memset(%struct.TYPE_7__*, i32, i32) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_status_foreach_ext(i32, %struct.TYPE_8__*, i32, %struct.TYPE_7__*) #2

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
